<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spikes.umarells.features.detail.DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_detail"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/image_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/spacing_5"
                tools:text="New building"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_description"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/spacing_5"
                tools:text="New building"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_label_start"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_5"
                app:layout_constraintEnd_toStartOf="@+id/text_end"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description"
                android:text="@string/building_site_from"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_label_end"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_label_start"
                app:layout_constraintTop_toBottomOf="@+id/text_description"
                android:text="@string/building_site_to"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_start"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                app:layout_constraintEnd_toStartOf="@+id/text_end"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_start"
                tools:text="12/12/2012"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_end"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_start"
                app:layout_constraintTop_toBottomOf="@+id/text_label_end"
                tools:text="12/12/2014"/>


            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"/>

            <fragment
                android:layout_marginTop="@dimen/spacing_5"
                android:id="@+id/map_building_site"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cameraZoom="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_start"
                app:liteMode="true"
                app:mapType="normal"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_hor_white"
                app:layout_constraintBottom_toBottomOf="@+id/map_building_site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/map_building_site"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_address"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                tools:text="Via Colvera 55/A \n 33085 \n Maniago"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/map_building_site"
                app:layout_constraintBottom_toBottomOf="@+id/map_building_site"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_5"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_building_site"
                tools:listitem="@layout/list_item_review"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_see_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_5"
                android:text="@string/action_see_all_reviews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_reviews"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
